@@ -25,6 +25,7 @@ Fixed bugs
 - correct redundancy filter in consdataCreateRedundant() of cons_bounddisjunction.c
 - replaced unreliable comparison of node pointers by node numbers in prop_genvbounds.c
 - allocate memory for all integral variables to avoid segmentation faults in applyCliqueFixings() of heur_clique.c
+- fix conflict resolution for one particular case in cons_indicator
 
 Build system
 ------------
